python/tests/gold/hostcleartext/snapshots/aconf.json
{
    "_errors": {},
    "_notices": {},
    "_sources": {
        "--diagnostics--": {
            "_referenced_by": {},
            "apiVersion": "getambassador.io/v0",
            "description": "The '--diagnostics--' source marks objects created by Ambassador to assist with diagnostic output.",
            "kind": "Diagnostics",
            "location": "--diagnostics--",
            "name": "Ambassador Diagnostics",
            "namespace": null,
            "rkey": "--diagnostics--",
            "serialization": null,
            "version": "getambassador.io/v0"
        },
        "--internal--": {
            "_referenced_by": {},
            "apiVersion": "getambassador.io/v0",
            "description": "The '--internal--' source marks objects created by Ambassador's internal logic.",
            "kind": "Internal",
            "location": "--internal--",
            "name": "Ambassador Internals",
            "namespace": null,
            "rkey": "--internal--",
            "serialization": null,
            "version": "getambassador.io/v0"
        },
        "cleartext-host.default.1": {
            "_referenced_by": {},
            "acmeProvider": {
                "authority": "none"
            },
            "ambassador_id": [
                "hostcleartext"
            ],
            "apiVersion": "getambassador.io/v2",
            "generation": 1,
            "hostname": "hostcleartext",
            "kind": "Host",
            "location": "cleartext-host.default.1",
            "metadata_labels": {
                "ambassador_crd": "cleartext-host.default",
                "kat-ambassador-id": "hostcleartext",
                "scope": "AmbassadorTest"
            },
            "name": "cleartext-host",
            "namespace": "default",
            "requestPolicy": {
                "insecure": {
                    "action": "Route"
                }
            },
            "rkey": "cleartext-host.default.1",
            "selector": {
                "matchLabels": {
                    "hostname": "host-cleartext"
                }
            },
            "serialization": "acmeProvider:\n  authority: none\nambassador_id:\n- hostcleartext\napiVersion: getambassador.io/v2\ngeneration: 1\nhostname: hostcleartext\nkind: Host\nmetadata_labels:\n  ambassador_crd: cleartext-host.default\n  kat-ambassador-id: hostcleartext\n  scope: AmbassadorTest\nname: cleartext-host\nnamespace: default\nrequestPolicy:\n  insecure:\n    action: Route\nselector:\n  matchLabels:\n    hostname: host-cleartext\n"
        },
        "cleartext-target-mapping.default.1": {
            "_referenced_by": {},
            "ambassador_id": [
                "hostcleartext"
            ],
            "apiVersion": "getambassador.io/v1",
            "generation": 1,
            "kind": "Mapping",
            "location": "cleartext-target-mapping.default.1",
            "metadata_labels": {
                "ambassador_crd": "cleartext-target-mapping.default",
                "hostname": "host-cleartext",
                "kat-ambassador-id": "hostcleartext",
                "scope": "AmbassadorTest"
            },
            "name": "cleartext-target-mapping",
            "namespace": "default",
            "prefix": "/target/",
            "rkey": "cleartext-target-mapping.default.1",
            "serialization": "ambassador_id:\n- hostcleartext\napiVersion: getambassador.io/v1\ngeneration: 1\nkind: Mapping\nmetadata_labels:\n  ambassador_crd: cleartext-target-mapping.default\n  hostname: host-cleartext\n  kat-ambassador-id: hostcleartext\n  scope: AmbassadorTest\nname: cleartext-target-mapping\nnamespace: default\nprefix: /target/\nservice: hostcleartext-http\n",
            "service": "hostcleartext-http"
        },
        "k8s-hostcleartext-admin-default": {
            "_referenced_by": {},
            "ambassador_id": "hostcleartext",
            "apiVersion": "getambassador.io/v2",
            "endpoints": {},
            "kind": "Service",
            "location": "k8s-hostcleartext-admin-default",
            "metadata_labels": {
                "kat-ambassador-id": "hostcleartext",
                "scope": "AmbassadorTest",
                "service": "hostcleartext-admin"
            },
            "name": "hostcleartext-admin",
            "namespace": "default",
            "rkey": "k8s-hostcleartext-admin-default",
            "serialization": "ambassador_id: hostcleartext\napiVersion: getambassador.io/v2\nendpoints: {}\nkind: Service\nmetadata_labels:\n  kat-ambassador-id: hostcleartext\n  scope: AmbassadorTest\n  service: hostcleartext-admin\nname: hostcleartext-admin\nnamespace: default\n"
        },
        "k8s-hostcleartext-default": {
            "_referenced_by": {},
            "ambassador_id": "hostcleartext",
            "apiVersion": "getambassador.io/v2",
            "endpoints": {},
            "kind": "Service",
            "location": "k8s-hostcleartext-default",
            "metadata_labels": {
                "app.kubernetes.io/component": "ambassador-service",
                "kat-ambassador-id": "hostcleartext",
                "scope": "AmbassadorTest"
            },
            "name": "hostcleartext",
            "namespace": "default",
            "rkey": "k8s-hostcleartext-default",
            "serialization": "ambassador_id: hostcleartext\napiVersion: getambassador.io/v2\nendpoints: {}\nkind: Service\nmetadata_labels:\n  app.kubernetes.io/component: ambassador-service\n  kat-ambassador-id: hostcleartext\n  scope: AmbassadorTest\nname: hostcleartext\nnamespace: default\n"
        },
        "k8s-hostcleartext-http-default": {
            "_referenced_by": {},
            "ambassador_id": "hostcleartext",
            "apiVersion": "getambassador.io/v2",
            "endpoints": {},
            "kind": "Service",
            "location": "k8s-hostcleartext-http-default",
            "metadata_labels": {
                "kat-ambassador-id": "hostcleartext",
                "scope": "AmbassadorTest"
            },
            "name": "hostcleartext-http",
            "namespace": "default",
            "rkey": "k8s-hostcleartext-http-default",
            "serialization": "ambassador_id: hostcleartext\napiVersion: getambassador.io/v2\nendpoints: {}\nkind: Service\nmetadata_labels:\n  kat-ambassador-id: hostcleartext\n  scope: AmbassadorTest\nname: hostcleartext-http\nnamespace: default\n"
        }
    },
    "hosts": {
        "cleartext-host": {
            "acmeProvider": {
                "authority": "none"
            },
            "ambassador_id": [
                "hostcleartext"
            ],
            "apiVersion": "getambassador.io/v2",
            "generation": 1,
            "hostname": "hostcleartext",
            "kind": "Host",
            "metadata_labels": {
                "ambassador_crd": "cleartext-host.default",
                "kat-ambassador-id": "hostcleartext",
                "scope": "AmbassadorTest"
            },
            "name": "cleartext-host",
            "namespace": "default",
            "requestPolicy": {
                "insecure": {
                    "action": "Route"
                }
            },
            "selector": {
                "matchLabels": {
                    "hostname": "host-cleartext"
                }
            }
        }
    },
    "mappings": {
        "cleartext-target-mapping": {
            "ambassador_id": [
                "hostcleartext"
            ],
            "apiVersion": "getambassador.io/v1",
            "generation": 1,
            "kind": "Mapping",
            "metadata_labels": {
                "ambassador_crd": "cleartext-target-mapping.default",
                "hostname": "host-cleartext",
                "kat-ambassador-id": "hostcleartext",
                "scope": "AmbassadorTest"
            },
            "name": "cleartext-target-mapping",
            "namespace": "default",
            "prefix": "/target/",
            "service": "hostcleartext-http"
        }
    },
    "service": {
        "k8s-hostcleartext-admin-default": {
            "ambassador_id": "hostcleartext",
            "apiVersion": "getambassador.io/v2",
            "endpoints": {},
            "kind": "Service",
            "metadata_labels": {
                "kat-ambassador-id": "hostcleartext",
                "scope": "AmbassadorTest",
                "service": "hostcleartext-admin"
            },
            "name": "hostcleartext-admin",
            "namespace": "default"
        },
        "k8s-hostcleartext-default": {
            "ambassador_id": "hostcleartext",
            "apiVersion": "getambassador.io/v2",
            "endpoints": {},
            "kind": "Service",
            "metadata_labels": {
                "app.kubernetes.io/component": "ambassador-service",
                "kat-ambassador-id": "hostcleartext",
                "scope": "AmbassadorTest"
            },
            "name": "hostcleartext",
            "namespace": "default"
        },
        "k8s-hostcleartext-http-default": {
            "ambassador_id": "hostcleartext",
            "apiVersion": "getambassador.io/v2",
            "endpoints": {},
            "kind": "Service",
            "metadata_labels": {
                "kat-ambassador-id": "hostcleartext",
                "scope": "AmbassadorTest"
            },
            "name": "hostcleartext-http",
            "namespace": "default"
        }
    }
}
