python/tests/gold/hostcleartext/snapshots/snapshot.yaml
{
    "Consul": {},
    "Kubernetes": {
        "AuthService": null,
        "ConsulResolver": null,
        "Host": [
            {
                "apiVersion": "getambassador.io/v2",
                "kind": "Host",
                "metadata": {
                    "annotations": {
                        "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"getambassador.io/v2\",\"kind\":\"Host\",\"metadata\":{\"annotations\":{},\"labels\":{\"kat-ambassador-id\":\"hostcleartext\",\"scope\":\"AmbassadorTest\"},\"name\":\"cleartext-host\",\"namespace\":\"default\"},\"spec\":{\"acmeProvider\":{\"authority\":\"none\"},\"ambassador_id\":[\"hostcleartext\"],\"hostname\":\"hostcleartext\",\"requestPolicy\":{\"insecure\":{\"action\":\"Route\"}},\"selector\":{\"ma [...]
                    },
                    "clusterName": "",
                    "creationTimestamp": "2020-01-09T12:55:03Z",
                    "generation": 1,
                    "labels": {
                        "kat-ambassador-id": "hostcleartext",
                        "scope": "AmbassadorTest"
                    },
                    "name": "cleartext-host",
                    "namespace": "default",
                    "resourceVersion": "14302",
                    "selfLink": "/apis/getambassador.io/v2/namespaces/default/hosts/cleartext-host",
                    "uid": "40a0577c-32df-11ea-906a-16ae7cdef087"
                },
                "spec": {
                    "acmeProvider": {
                        "authority": "none"
                    },
                    "ambassador_id": [
                        "hostcleartext"
                    ],
                    "hostname": "hostcleartext",
                    "requestPolicy": {
                        "insecure": {
                            "action": "Route"
                        }
                    },
                    "selector": {
                        "matchLabels": {
                            "hostname": "host-cleartext"
                        }
                    }
                }
            }
        ],
        "KubernetesEndpointResolver": null,
        "KubernetesServiceResolver": null,
        "LogService": null,
        "Mapping": [
            {
                "apiVersion": "getambassador.io/v1",
                "kind": "Mapping",
                "metadata": {
                    "annotations": {
                        "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"getambassador.io/v1\",\"kind\":\"Mapping\",\"metadata\":{\"annotations\":{},\"labels\":{\"hostname\":\"host-cleartext\",\"kat-ambassador-id\":\"hostcleartext\",\"scope\":\"AmbassadorTest\"},\"name\":\"cleartext-target-mapping\",\"namespace\":\"default\"},\"spec\":{\"ambassador_id\":[\"hostcleartext\"],\"prefix\":\"/target/\",\"service\":\"hostcleartext-http\"}}\n"
                    },
                    "clusterName": "",
                    "creationTimestamp": "2020-01-09T12:55:03Z",
                    "generation": 1,
                    "labels": {
                        "hostname": "host-cleartext",
                        "kat-ambassador-id": "hostcleartext",
                        "scope": "AmbassadorTest"
                    },
                    "name": "cleartext-target-mapping",
                    "namespace": "default",
                    "resourceVersion": "14304",
                    "selfLink": "/apis/getambassador.io/v1/namespaces/default/mappings/cleartext-target-mapping",
                    "uid": "40a72fd6-32df-11ea-906a-16ae7cdef087"
                },
                "spec": {
                    "ambassador_id": [
                        "hostcleartext"
                    ],
                    "prefix": "/target/",
                    "service": "hostcleartext-http"
                }
            }
        ],
        "Module": null,
        "RateLimitService": null,
        "TCPMapping": null,
        "TLSContext": null,
        "TracingService": null,
        "ingresses": null,
        "secret": null,
        "service": [
            {
                "apiVersion": "v1",
                "kind": "Service",
                "metadata": {
                    "annotations": {
                        "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"v1\",\"kind\":\"Service\",\"metadata\":{\"annotations\":{},\"labels\":{\"app.kubernetes.io/component\":\"ambassador-service\",\"kat-ambassador-id\":\"hostcleartext\",\"scope\":\"AmbassadorTest\"},\"name\":\"hostcleartext\",\"namespace\":\"default\"},\"spec\":{\"ports\":[{\"name\":\"http\",\"port\":80,\"protocol\":\"TCP\",\"targetPort\":8080},{\"name\":\"https\",\"port\":443,\"protocol\":\"TCP\",\"targe [...]
                    },
                    "creationTimestamp": "2020-01-09T12:55:02Z",
                    "labels": {
                        "app.kubernetes.io/component": "ambassador-service",
                        "kat-ambassador-id": "hostcleartext",
                        "scope": "AmbassadorTest"
                    },
                    "name": "hostcleartext",
                    "namespace": "default",
                    "resourceVersion": "14290",
                    "selfLink": "/api/v1/namespaces/default/services/hostcleartext",
                    "uid": "40839b47-32df-11ea-906a-16ae7cdef087"
                },
                "spec": {
                    "clusterIP": "10.97.113.65",
                    "externalTrafficPolicy": "Cluster",
                    "ports": [
                        {
                            "name": "http",
                            "nodePort": 30187,
                            "port": 80,
                            "protocol": "TCP",
                            "targetPort": 8080
                        },
                        {
                            "name": "https",
                            "nodePort": 31408,
                            "port": 443,
                            "protocol": "TCP",
                            "targetPort": 8443
                        }
                    ],
                    "selector": {
                        "service": "hostcleartext"
                    },
                    "sessionAffinity": "None",
                    "type": "NodePort"
                },
                "status": {
                    "loadBalancer": {}
                }
            },
            {
                "apiVersion": "v1",
                "kind": "Service",
                "metadata": {
                    "annotations": {
                        "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"v1\",\"kind\":\"Service\",\"metadata\":{\"annotations\":{},\"labels\":{\"kat-ambassador-id\":\"hostcleartext\",\"scope\":\"AmbassadorTest\",\"service\":\"hostcleartext-admin\"},\"name\":\"hostcleartext-admin\",\"namespace\":\"default\"},\"spec\":{\"ports\":[{\"name\":\"hostcleartext-admin\",\"port\":8877,\"targetPort\":8877}],\"selector\":{\"service\":\"hostcleartext\"},\"type\":\"NodePort\"}}\n"
                    },
                    "creationTimestamp": "2020-01-09T12:55:03Z",
                    "labels": {
                        "kat-ambassador-id": "hostcleartext",
                        "scope": "AmbassadorTest",
                        "service": "hostcleartext-admin"
                    },
                    "name": "hostcleartext-admin",
                    "namespace": "default",
                    "resourceVersion": "14296",
                    "selfLink": "/api/v1/namespaces/default/services/hostcleartext-admin",
                    "uid": "408d88f7-32df-11ea-906a-16ae7cdef087"
                },
                "spec": {
                    "clusterIP": "10.100.145.174",
                    "externalTrafficPolicy": "Cluster",
                    "ports": [
                        {
                            "name": "hostcleartext-admin",
                            "nodePort": 31665,
                            "port": 8877,
                            "protocol": "TCP",
                            "targetPort": 8877
                        }
                    ],
                    "selector": {
                        "service": "hostcleartext"
                    },
                    "sessionAffinity": "None",
                    "type": "NodePort"
                },
                "status": {
                    "loadBalancer": {}
                }
            },
            {
                "apiVersion": "v1",
                "kind": "Service",
                "metadata": {
                    "annotations": {
                        "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"v1\",\"kind\":\"Service\",\"metadata\":{\"annotations\":{},\"labels\":{\"kat-ambassador-id\":\"hostcleartext\",\"scope\":\"AmbassadorTest\"},\"name\":\"hostcleartext-http\",\"namespace\":\"default\"},\"spec\":{\"ports\":[{\"name\":\"http\",\"port\":80,\"protocol\":\"TCP\",\"targetPort\":8102},{\"name\":\"https\",\"port\":443,\"protocol\":\"TCP\",\"targetPort\":8465}],\"selector\":{\"backend\":\"superpo [...]
                    },
                    "creationTimestamp": "2020-01-09T12:55:03Z",
                    "labels": {
                        "kat-ambassador-id": "hostcleartext",
                        "scope": "AmbassadorTest"
                    },
                    "name": "hostcleartext-http",
                    "namespace": "default",
                    "resourceVersion": "14307",
                    "selfLink": "/api/v1/namespaces/default/services/hostcleartext-http",
                    "uid": "40b080dd-32df-11ea-906a-16ae7cdef087"
                },
                "spec": {
                    "clusterIP": "10.99.43.46",
                    "ports": [
                        {
                            "name": "http",
                            "port": 80,
                            "protocol": "TCP",
                            "targetPort": 8102
                        },
                        {
                            "name": "https",
                            "port": 443,
                            "protocol": "TCP",
                            "targetPort": 8465
                        }
                    ],
                    "selector": {
                        "backend": "superpod-default"
                    },
                    "sessionAffinity": "None",
                    "type": "ClusterIP"
                },
                "status": {
                    "loadBalancer": {}
                }
            }
        ]
    }
}
